--- a/netflix_recommendation.ipynb
+++ b/netflix_recommendation.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d31f27ad",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fe1d745b",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "2f4c0e3a",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
        "17770"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9bfd5ff0",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "(100498277, 2)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "c138bce4",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "eb04fce8",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "4    30878     4.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "8a8c66c9",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "cfb83cd8-01ff-41c9-b51d-ace628aa2626",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "525d669e-8a7a-4df5-8298-0783bb49d1f5",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "510f492a-187f-4bd2-b32e-e7b26ecbfbe1",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
        "5.0     23168232"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "66308daa-2746-4872-98b1-a2feaa92270e",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
        "[Text(0.5, 1.0, 'Distribution of Ratings')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "28f53aa9-3830-46b3-a819-0bdbf9a8d0d1",
    "metadata": {},
    "outputs": [],
@@ -383,6 +383,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "id": "126b3b18-6eaf-45ae-9f69-3e1cfc0e2219",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17765</th>\n",
+       "      <td>100488431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17766</th>\n",
+       "      <td>100489037</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17767</th>\n",
+       "      <td>100489242</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17768</th>\n",
+       "      <td>100490605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17769</th>\n",
+       "      <td>100497355</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17770 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           index\n",
+       "0              0\n",
+       "1            548\n",
+       "2            694\n",
+       "3           2707\n",
+       "4           2850\n",
+       "...          ...\n",
+       "17765  100488431\n",
+       "17766  100489037\n",
+       "17767  100489242\n",
+       "17768  100490605\n",
+       "17769  100497355\n",
+       "\n",
+       "[17770 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "id": "cfc9456b-df39-48bb-bb67-4e2b1c005333",
    "metadata": {},
@@ -394,28 +506,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "b29b1844-3350-4ea4-bdbd-331c3121d5c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "array([        0,       548,       694, ..., 100489242, 100490605,\n",
+       "       100497355])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(movie_rows)"
+    "movie_rows"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 15,
+   "id": "0ad6c526-d27b-4b17-87cf-3200bb299849",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings.drop(index=movie_rows, axis=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ed03a29d-589d-46dc-9362-366582b56263",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cust_Id</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1488844</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>822109</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>885013</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>30878</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>823519</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Cust_Id  Rating\n",
+       "1  1488844     3.0\n",
+       "2   822109     5.0\n",
+       "3   885013     4.0\n",
+       "4    30878     4.0\n",
+       "5   823519     3.0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c181020f-6d96-4fda-bafc-21f6528c1e6d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratings = ratings.astype('uint32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9e3558d6-d970-4eed-85dd-90419dce1dc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cust_Id    uint32\n",
+       "Rating     uint32\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "137d1ce6-1832-4f44-9be0-0ae55cae08b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>548</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>694</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2850</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0\n",
+       "0     0\n",
+       "1   548\n",
+       "2   694\n",
+       "3  2707\n",
+       "4  2850"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(movie_rows).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "bca2f291-1dd3-4827-808c-6d7eb22000db",
    "metadata": {},
    "outputs": [],
@@ -435,29 +743,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "81d0cf35-0ca3-4ea7-a818-c573409c6057",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 100497355 is out of bounds for axis 0 with size 100480507",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_12681/3801319885.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnew_rows\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m100497355\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m: index 100497355 is out of bounds for axis 0 with size 100480507"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17764\n"
      ]
     }
    ],
    "source": [
-    "print(new_rows[100497355])"
+    "print(new_rows[100480506])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
+   "id": "7d78757c-dfd0-407c-bb23-b3a87d0d4057",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>690</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>691</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>692</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>693</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>694</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>695</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>696</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>697</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>698</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>699</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     0\n",
+       "690  2\n",
+       "691  2\n",
+       "692  2\n",
+       "693  2\n",
+       "694  3\n",
+       "695  3\n",
+       "696  3\n",
+       "697  3\n",
+       "698  3\n",
+       "699  3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(new_rows).iloc[690:700]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "489c29bc-d871-4c79-87ad-48f32f293514",
    "metadata": {},
    "outputs": [
@@ -467,7 +869,7 @@
        "100480507"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
