--- a/continued-preprocessing.ipynb
+++ b/continued-preprocessing.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Project 4: Continued \n",
-    "In the previous notebook, I did all the processing I could within the memory limitations of my laptop, for this next segment I am going to One Hot encode the data so that the customers are the index and each column is a movie. I will also explore PCA. Due to memory limitations, I will try lazy loading via the Dask library."
+    "In the previous notebook, I did all the processing I could within the memory limitations of my laptop. I exported the cleaned CSV and starting with a clean kernel to One Hot encode the data so that the customers are the index and each column is a movie. I will also explore PCA. "
    ]
   },
   {
@@ -24,76 +24,146 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "012ca349-c749-4513-b10e-62551aa175be",
+   "execution_count": 4,
+   "id": "04aa787a-15f2-4bb1-9a0e-7f4d0cf8b1d4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import dask\n",
-    "import dask.dataframe as dd"
+    "#read the previously cleaned csv\n",
+    "df = pd.read_csv('combined_data_cleaned.csv')\n",
+    "df = df.astype('uint32')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f872f67a-2d12-43a1-967b-160702caf4e0",
+   "metadata": {},
+   "source": [
+    "Need to reduce size of data still. In the previous notebook, somewhat methodical methods of compression were implemented. The data was reduced a considerable amount. But it is still too large for some of the operations I want to complete. At this point we'll randomly drop customers and movies using the function below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f487a4bc-334a-4f5b-b4a4-9abc54261d19",
+   "id": "f278d1f7-c925-4fa6-8723-b88ad9a02730",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read the previously cleaned csv\n",
-    "df = dd.read_csv('combined_data_cleaned.csv')"
+    "import typing as T\n",
+    "import random as rand\n",
+    "\n",
+    "def drop_random(values: list, length: int, proportion: float):\n",
+    "    '''\n",
+    "    Parameters\n",
+    "        values: \"list like\" - Array of original values before randomly dropped\n",
+    "        length: int - length of the values array\n",
+    "        proportion: float - proportion of values to KEEP ex. .8 keep 80% of the data\n",
+    "    '''\n",
+    "    num_to_drop = length -  int(length*proportion)\n",
+    "    to_drop = np.empty(num_to_drop, dtype=int)\n",
+    "    \n",
+    "    for i in range(0,num_to_drop):\n",
+    "        while True:\n",
+    "            n = rand.randrange(length)\n",
+    "            if n not in to_drop[:]:\n",
+    "                to_drop[i] = n\n",
+    "                break\n",
+    "\n",
+    "    return np.delete(values, to_drop, axis=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3259e5c5-f500-4a29-9c5e-e5dca82768f4",
+   "execution_count": 5,
+   "id": "f3234b64-a7ad-45ad-a71b-33e93d85d7ea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.astype('uint32')"
+    "customers = df.Cust_Id.value_counts().index\n",
+    "movies = df.Movie_Id.value_counts().index\n",
+    "customers_to_drop = drop_random(customers, len(customers), .3)\n",
+    "movies_to_drop = drop_random(movies, len(movies), .6)\n",
+    "df_trimmed = df[df['Cust_Id'].isin(customers_to_drop)]\n",
+    "df_trimmed = df_trimmed[df_trimmed['Movie_Id'].isin(movies_to_drop)]\n",
+    "del df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "87ba158b-1b4f-4853-849e-dca51f2dc811",
+   "id": "db250203-0e81-42ef-9ad6-db4c32286bcb",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.47 s, sys: 38.8 ms, total: 5.51 s\n",
-      "Wall time: 5.51 s\n"
+      "Customer count before drop:\t 291590\n",
+      "Movie count before drop:\t 16031\n",
+      "Customer count after drop:\t 87477\n",
+      "Movie count after drop:\t\t 9618\n"
      ]
     }
    ],
    "source": [
-    "#encode data \n",
-    "df = df.categorize('Movie_Id')\n",
-    "%time df_p = df.pivot_table(index='Cust_Id', columns='Movie_Id', values='Rating')"
+    "print(\"Customer count before drop:\\t\", len(customers))\n",
+    "print(\"Movie count before drop:\\t\", len(movies))\n",
+    "print(\"Customer count after drop:\\t\", len(df_trimmed.Cust_Id.value_counts().index))\n",
+    "print(\"Movie count after drop:\\t\\t\", len(df_trimmed.Movie_Id.value_counts().index))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "3a72f806-4add-4fa3-b9cf-3dcd3ce7f09f",
+   "execution_count": 7,
+   "id": "bbc74479-fe1a-4f18-b037-b8de9ff500e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6573343 entries, 188 to 35021634\n",
+      "Columns: 3 entries, Cust_Id to Movie_Id\n",
+      "dtypes: uint32(3)\n",
+      "memory usage: 125.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_trimmed.info(verbose=False, memory_usage=\"deep\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "88db89ff-055a-4e20-b556-20641d2a50f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_pivot = df_trimmed.pivot_table(index = 'Cust_Id', columns = 'Movie_Id', values = 'Rating')\n",
+    "del df_trimmed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "8d5f2b4b-7b21-4456-aa8c-ebcca73ace7a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Delayed('int-ca16c810-65cc-4378-bff1-6316dd22563d'), 16031)"
+       "(87477, 9618)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_p.shape"
+    "df_pivot.shape"
    ]
   }
  ],
