--- a/continued-preprocessing.ipynb
+++ b/continued-preprocessing.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "6894a17c-bea2-4f07-b9d2-470421e09b20",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Project 4: Continued \n",
     "In the previous notebook, I did all the processing I could within the memory limitations of my laptop. I exported the cleaned CSV and starting with a clean kernel to One Hot encode the data so that the customers are the index and each column is a movie. I will also explore PCA. "
@@ -12,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d26e292-9738-4e6f-8f01-cbaf482a99c6",
+   "id": "8dd8f1af-d19a-497f-a664-c6b60ca9d5f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "04aa787a-15f2-4bb1-9a0e-7f4d0cf8b1d4",
    "metadata": {},
    "outputs": [],
@@ -39,6 +41,7 @@
    "id": "f872f67a-2d12-43a1-967b-160702caf4e0",
    "metadata": {},
    "source": [
+    "### Continuing to Reduce Data Size \n",
     "Need to reduce size of data still. In the previous notebook, somewhat methodical methods of compression were implemented. The data was reduced a considerable amount. But it is still too large for some of the operations I want to complete. At this point we'll randomly drop customers and movies using the function below."
    ]
   },
@@ -52,6 +55,7 @@
     "import typing as T\n",
     "import random as rand\n",
     "\n",
+    "#Drop random indices from given list\n",
     "def drop_random(values: list, length: int, proportion: float):\n",
     "    '''\n",
     "    Parameters\n",
@@ -74,15 +78,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "f3234b64-a7ad-45ad-a71b-33e93d85d7ea",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get customer and movie unqique values\n",
     "customers = df.Cust_Id.value_counts().index\n",
     "movies = df.Movie_Id.value_counts().index\n",
-    "customers_to_drop = drop_random(customers, len(customers), .3)\n",
-    "movies_to_drop = drop_random(movies, len(movies), .6)\n",
+    "\n",
+    "# get random customers and movies to drop\n",
+    "customers_to_drop = drop_random(customers, len(customers), .1)\n",
+    "movies_to_drop = drop_random(movies, len(movies), .3)\n",
+    "\n",
+    "#drop the random customers and movies\n",
     "df_trimmed = df[df['Cust_Id'].isin(customers_to_drop)]\n",
     "df_trimmed = df_trimmed[df_trimmed['Movie_Id'].isin(movies_to_drop)]\n",
     "del df"
@@ -90,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "db250203-0e81-42ef-9ad6-db4c32286bcb",
    "metadata": {},
    "outputs": [
@@ -100,8 +109,8 @@
      "text": [
       "Customer count before drop:\t 291590\n",
       "Movie count before drop:\t 16031\n",
-      "Customer count after drop:\t 87477\n",
-      "Movie count after drop:\t\t 9618\n"
+      "Customer count after drop:\t 29159\n",
+      "Movie count after drop:\t\t 4789\n"
      ]
     }
    ],
@@ -114,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "bbc74479-fe1a-4f18-b037-b8de9ff500e4",
    "metadata": {},
    "outputs": [
@@ -123,10 +132,10 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 6573343 entries, 188 to 35021634\n",
+      "Int64Index: 1065779 entries, 1575 to 35021621\n",
       "Columns: 3 entries, Cust_Id to Movie_Id\n",
       "dtypes: uint32(3)\n",
-      "memory usage: 125.4 MB\n"
+      "memory usage: 20.3 MB\n"
      ]
     }
    ],
@@ -136,34 +145,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "88db89ff-055a-4e20-b556-20641d2a50f1",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#rearrange data frame so that customers and rows and movies are columns\n",
     "df_pivot = df_trimmed.pivot_table(index = 'Cust_Id', columns = 'Movie_Id', values = 'Rating')\n",
     "del df_trimmed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8d5f2b4b-7b21-4456-aa8c-ebcca73ace7a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(87477, 9618)"
+       "(29159, 4789)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_pivot.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "73a659aa-74e3-4527-9670-87ee6988b8d7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export reformatted data \n",
+    "df_pivot.to_csv('data_pivot.csv')"
    ]
   }
  ],
